Delete the -w option to fastify start, because it watches process.cwd() directory for changes, recursively; when that happens, the process will auto reload.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
 	"scripts": {
 		"test": "tap \"test/**/*.test.js\"",
 		"start": "fastify start -a 0.0.0.0 -p 12080 app.js > app.log 2>&1 < /dev/null &",
-		"dev": "fastify start -a 0.0.0.0 -p 12080 -w -l info -P app.js"
+		"dev": "fastify start -a 0.0.0.0 -p 12080 -l info -P app.js"
 	}
 }
